@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <metadata>
+  <attr path="/api/namespace/class[@cname='ArtAffine_']/method[@name='Equal']/return-type" name="type">gboolean</attr>
+  <attr path="/api/namespace/class[@cname='ArtAffine_']/method[@name='Flip']/*/*[@type='int']" name="type">gboolean</attr>
   <attr path="/api/namespace/class[@cname='ArtAffine_']/method[@name='Point']/*/*[@name='dst']" name="pass_as">out</attr>
+  <attr path="/api/namespace/class[@cname='ArtAffine_']/method[@name='Rectilinear']/return-type" name="type">gboolean</attr>
   <attr path="/api/namespace/class[@cname='ArtAffine_']/method[@name='ToString']" name="name">ToStringArray</attr>
   <attr path="/api/namespace/struct[@cname='ArtGradientStop']/field[@cname='color']" name="array_len">17</attr>
   <attr path="/api/namespace/struct[@cname='ArtRender']/field[@cname='clear_color']" name="array_len">17</attr>
