@@ -68,7 +68,7 @@
       </Docs>
     </Member>
     <Member MemberName="Flip">
-      <MemberSignature Language="C#" Value="public static void Flip (double [] dst_affine, double [] src_affine, int horz, int vert);" />
+      <MemberSignature Language="C#" Value="public static void Flip (double [] dst_affine, double [] src_affine, bool horz, bool vert);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
@@ -76,8 +76,8 @@
       <Parameters>
         <Parameter Name="dst_affine" Type="System.Double[]" />
         <Parameter Name="src_affine" Type="System.Double[]" />
-        <Parameter Name="horz" Type="System.Int32" />
-        <Parameter Name="vert" Type="System.Int32" />
+        <Parameter Name="horz" Type="System.Boolean" />
+        <Parameter Name="vert" Type="System.Boolean" />
       </Parameters>
       <Docs>
         <summary>Flips the affine transform.</summary>
@@ -159,10 +159,10 @@
       </Docs>
     </Member>
     <Member MemberName="Rectilinear">
-      <MemberSignature Language="C#" Value="public static int Rectilinear (double [] src);" />
+      <MemberSignature Language="C#" Value="public static bool Rectilinear (double [] src);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
-        <ReturnType>System.Int32</ReturnType>
+        <ReturnType>System.Boolean</ReturnType>
       </ReturnValue>
       <Parameters>
         <Parameter Name="src" Type="System.Double[]" />
@@ -170,15 +170,15 @@
       <Docs>
         <summary>Determines wether a matrix is rectilinear, i.e. grid-aligned rectangles are transformed to other grid-aligned rectangles.</summary>
         <param name="src">The affine transformation to test.</param>
-        <returns>a <see cref="T:System.Int32" /></returns>
+        <returns><see langword="true" /> if the matrix is rectilinear.</returns>
         <remarks>The implementation has epsilon-tolerance for roundoff errors.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Equal">
-      <MemberSignature Language="C#" Value="public static int Equal (double [] matrix1, double [] matrix2);" />
+      <MemberSignature Language="C#" Value="public static bool Equal (double [] matrix1, double [] matrix2);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
-        <ReturnType>System.Int32</ReturnType>
+        <ReturnType>System.Boolean</ReturnType>
       </ReturnValue>
       <Parameters>
         <Parameter Name="matrix1" Type="System.Double[]" />
@@ -188,7 +188,7 @@
         <summary>Determine if two matrices are equal.</summary>
         <param name="matrix1">An affine transformation.</param>
         <param name="matrix2">Another affine transformation.</param>
-        <returns>True if the matrices are equal, otherwise false.</returns>
+        <returns><see langword="true" /> if the matrices are equal.</returns>
         <remarks>Equality is verified with epsilon-tolerance for roundoff errors.</remarks>
       </Docs>
     </Member>
