@@ -310,5 +310,21 @@ Default value: 0
         <remarks />
       </Docs>
     </Member>
+    <Member MemberName="New">
+      <MemberSignature Language="C#" Value="public static Gtk.Expander New (string label);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.Expander</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="label" Type="System.String" />
+      </Parameters>
+      <Docs>
+        <summary>To be added</summary>
+        <param name="label">a <see cref="T:System.String" /></param>
+        <returns>a <see cref="T:Gtk.Expander" /></returns>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
