@@ -1,3 +1,8 @@
+2004-12-08  Mike Kestner  <mkestner@novell.com>
+
+	* en/Art/Affine.xml : some s/int/bool changes.
+	* en/Gtk/Expander.xml : a ctor the updater added.
+
 2004-12-06  John Luke  <john.luke@gmail.com>
 
 	* en/Gtk/ComboBoxEntry.xml: doc it
