@@ -1,3 +1,7 @@
+2004-12-08  Mike Kestner  <mkestner@novell.com>
+
+	* art/Art.metadata : mark some ints as bools. [Fixes #61047]
+
 2004-12-08  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	* sample/Makefile.am: Readded TestVfs.cs back and make it conditional.
